k8s/bet-resolver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: bet-resolver
  name: bet-resolver
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: bet-resolver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: bet-resolver
    spec:
      containers:
        - env:
            - name: CALLBACK_URL
              value: http://callback:3000/callback
            - name: KAFKA_BROKERS
              value: kafka:9093
          image: bet-resolver
          name: bet-resolver
          volumeMounts:
            - mountPath: /usr/src/app
              name: bet-resolver-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: bet-resolver-cm0
          name: bet-resolver-cm0
