k8s/callback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: callback
  name: callback
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: callback
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: callback
    spec:
      containers:
        - env:
            - name: HMAC_SECRET
              value: super-secret-change-in-prod
            - name: KAFKA_BROKERS
              value: kafka:9093
          image: callback
          name: callback
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
