k8s/cassandra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cassandra
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: cassandra
    spec:
      containers:
        - env:
            - name: HEAP_NEWSIZE
              value: 1G
            - name: MAX_HEAP_SIZE
              value: 4G
          image: cassandra:5.0
          livenessProbe:
            exec:
              command:
                - '[ $(nodetool statusgossip) = running ]'
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: cassandra
          ports:
            - containerPort: 9042
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/cassandra
              name: cassandra-data
            - mountPath: /docker-entrypoint-initdb.d/schema.cql
              name: cassandra-cm1
              subPath: schema.cql
      restartPolicy: Always
      volumes:
        - name: cassandra-data
          persistentVolumeClaim:
            claimName: cassandra-data
        - configMap:
            items:
              - key: schema.cql
                path: schema.cql
            name: cassandra-cm1
          name: cassandra-cm1
