k8s/ledger-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ledger-worker
  name: ledger-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: ledger-worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ledger-worker
    spec:
      containers:
        - env:
            - name: CASSANDRA_HOSTS
              value: cassandra
            - name: CASSANDRA_KEYSPACE
              value: aviator
            - name: KAFKA_BROKERS
              value: kafka:9093
            - name: REDIS_URL
              value: redis://redis:6379
          image: ledger-worker
          name: ledger-worker
      restartPolicy: Always
