k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --save
            - "60"
            - "1"
            - --loglevel
            - warning
          image: redis:7-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
