k8s/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  ports:
    - name: "9042"
      port: 9042
      targetPort: 9042
  selector:
    io.kompose.service: cassandra
