k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3000
  selector:
    io.kompose.service: grafana
