k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
    - name: "9093"
      port: 9093
      targetPort: 9093
  selector:
    io.kompose.service: kafka
